2011-01-19  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Employ TextPrompt for CSS property name/value autocompletion
        https://bugs.webkit.org/show_bug.cgi?id=52212

        * inspector/styles-add-blank-property.html: Follow the altered event handling.
        * inspector/styles-url-linkify.html: Eliminate flakiness.

2011-01-19  Dai Mikurube  <dmikurube@google.com>

        Reviewed by Kent Tamura.

        Implement onformchange and onforminput event handlers
        https://bugs.webkit.org/show_bug.cgi?id=26141

        * fast/dom/Window/window-properties-expected.txt: Added form events.
        * fast/dom/Window/window-property-descriptors-expected.txt: Added form events.
        * fast/forms/formchange-event-expected.txt: Added.
        * fast/forms/formchange-event.html: Added to test formchange events.
        * fast/forms/forminput-event-expected.txt: Added.
        * fast/forms/forminput-event.html: Added to test forminput events.
        * fast/forms/script-tests/formchange-event.js: Added.
        (sendKey):
        (sendText):
        * fast/forms/script-tests/forminput-event.js: Added.
        (sendKey):
        (sendText):

2011-01-18  Mikhail Naganov  <mnaganov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: Add layout test for the CPU profiler.

        This test replaces DevToolsSanityTest.TestProfilerTab from
        Chromium's interactive_ui_tests.

        https://bugs.webkit.org/show_bug.cgi?id=52634

        * inspector/cpu-profiler-profiling-expected.txt: Added.
        * inspector/cpu-profiler-profiling.html: Added.

2011-01-18  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: make InjectedScriptAccess API a part of Web Inspector protocol.
        https://bugs.webkit.org/show_bug.cgi?id=52652

        Calls served by the InjectedScript should be first class protocol