@@ -1,67 +1,0 @@
-<html>
-<head>
-  <script src="../http/tests/inspector/inspector-test2.js"></script>
-<script>
-
-function pageFunction() {
-    console.profile("outer");
-    console.profile("inner");  // [Chromium] Make sure we capture the current callstack.
-    console.profileEnd("inner");
-    console.profileEnd("outer");
-}
-
-function initialize_ProfilerTests()
-{
-    var oldAddProfileHeader = WebInspector.panels.profiles._addProfileHeader;
-    WebInspector.panels.profiles._addProfileHeader = function(profile)
-    {
-        oldAddProfileHeader.call(this, profile);
-        if (profile.title === "inner") {
-            this.showProfile(profile);
-        }
-    }
-
-    var oldRefresh = WebInspector.CPUProfileView.prototype.refresh;
-    WebInspector.CPUProfileView.prototype.refresh = function()
-    {
-        oldRefresh.call(this);
-        if (this.profile.title === "inner") {
-            var tree = this.profileDataGridTree;
-            if (!tree)
-                 InspectorTest.addResult("no tree");
-            var node = tree.children[0];
-            if (!node)
-                 InspectorTest.addResult("no node");
-            while (node) {
-                if (node.functionName.indexOf("pageFunction") !== -1) {
-                    InspectorTest.addResult("found pageFunction");
-                    break;
-                }
-                node = node.traverseNextNode(true, null, true);
-            }
-            InspectorTest.completeTest();
-        }
-    }
-}
-
-function test()
-{
-    WebInspector.showPanel("profiles");
-    WebInspector.panels.profiles._enableProfiling();
-    InspectorBackend.startProfiling();
-    InspectorTest.evaluateInConsole("pageFunction()", function done()
-    {
-        InspectorBackend.stopProfiling();
-    });
-}
-
-</script>
-</head>
-<body onload="runTest()">
-<p>
-Tests that CPU profiling works.
-
-<a href="https://bugs.webkit.org/show_bug.cgi?id=52634">Bug 52634.</a>
-</p>
-</body>
-</html>
