@@ -1,3 +1,7 @@
+2011-01-19  Mikhail Naganov  <mnaganov@chromium.org>
+
+        Revert r76114 -- added test fails on Chromium canaries.
+
 2011-01-19  Alexander Pavlov  <apavlov@chromium.org>
 
         Reviewed by Pavel Feldman.
